# MIT-MINER

./: .travis.yml  CMakeLists.txt  appveyor.yml  circle.yml
cmake/: MitCheckCXXFlags - Copy.cmake  MitCompilerSettings - Copy.cmake
docs/: API_DOCUMENTATION.md  BUILD.md
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt  httpServer.cpp  httpServer.h
libdevcore/: Guards.h  Log.cpp  Terminal.h
libhwmon/: CMakeLists.txt  wrapadl.cpp  wrapamdsysfs.cpp  wraphelper.h  wrapnvml.cpp
libmitash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libmitash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  dagger_shuffled.cuh  mitash_cuda_miner_kernel.cu  mitash_cuda_miner_kernel.h
libmitcore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  EthashAux.cpp  EthashAux.h  Exceptions.h  Farm.h  Miner.cpp  Miner.h
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h  getwork.json  jsonrpc_getwork.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
mitminer/: CMakeLists.txt  DBusInt.h  main.cpp
